feat: implement comprehensive localization system for Chrome extension
- Add complete i18n abstraction layer following chrome-api pattern
- Create English and Spanish locale files with 348+ message keys
- Update manifest.json with localization support using __MSG_ syntax
- Migrate hardcoded strings to localized constants
- Implement language detection, switching, and caching functionality
- Add comprehensive testing framework with 32 localization tests
- Fix TypeScript path resolution for @/config/* imports
- Remove invalid comment keys from locale files for Chrome extension compatibility
- Update build process to include _locales directory in distribution
- Add performance optimization with message caching and batch operations

Resolves Chrome extension manifest validation errors and enables
full internationalization support with extensibility for additional languages.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:ui": "vite --config vite.dev.config.ts",
     "build": "tsc && vite build && npm run post-build",
     "build:dev": "vite build --config vite.dev.config.ts",
-    "post-build": "cp manifest.json dist/ && cp rules.json dist/ && cp -r src/assets dist/ && cp src/content/injected-script.ts dist/src/content/injected-script.js && mkdir -p dist/src/shared && cp src/shared/theme-init.js dist/src/shared/",
+    "post-build": "cp manifest.json dist/ && cp rules.json dist/ && cp -r src/assets dist/ && cp src/content/injected-script.ts dist/src/content/injected-script.js && mkdir -p dist/src/shared && cp src/shared/theme-init.js dist/src/shared/ && cp -r _locales dist/",
     "build:extension": "npm run build",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
