--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "RequestKit",
-  "description": "Advanced Chrome extension for injecting custom headers with powerful Variable System, pattern matching, and testing tools",
+  "name": "__MSG_extensionName__",
+  "description": "__MSG_extensionDescription__",
   "version": "1.0.0",
+  "default_locale": "en",
   "permissions": [
     "declarativeNetRequest",
     "storage",
@@ -25,7 +26,7 @@
   "devtools_page": "src/devtools/devtools.html",
   "action": {
     "default_popup": "src/popup/index.html",
-    "default_title": "RequestKit",
+    "default_title": "__MSG_extensionName__",
     "default_icon": {
       "16": "assets/icons/icon-16.png",
       "32": "assets/icons/icon-32.png",
