feat: add localization validation and testing scripts
- Add npm run test:i18n for running localization-specific tests
- Add npm run validate-messages for Chrome extension locale file validation
- Add npm run check-missing-keys for scanning hardcoded strings
- Create scripts/validate-messages.js with comprehensive validation logic
- Create scripts/check-missing-keys.js for detecting potential missing translations
- Fix variable scoping issues in validation scripts
- All scripts tested and working correctly

These tools help maintain localization quality and identify areas
needing translation coverage.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:ui": "vitest --ui",
-    "test:watch": "vitest --watch"
+    "test:watch": "vitest --watch",
+    "test:i18n": "vitest run src/__tests__/i18n/",
+    "validate-messages": "node scripts/validate-messages.js",
+    "check-missing-keys": "node scripts/check-missing-keys.js"
   },
   "dependencies": {
     "@preact/signals": "^1.2.2",
