--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sonarjs": "^3.0.4",
     "glob": "^11.0.3",
     "jsdom": "^24.1.3",
     "lefthook": "^1.12.2",
